--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "color": "^4.2.3",
     "expo": "~48.0.9",
     "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.4",
+    "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-redash": "^18.1.0",
-    "react-native-svg": "^13.9.0",
-    "react-native-web": "^0.19.4"
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/color": "^3.0.4",
     "@types/react": "~18.0.14",
     "typescript": "^4.9.4"
   },
